[metadata]
name = cnt9x
description = Pendulum Counter CNT-9x
url = https://github.com/bleykauf/cnt9x
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    PyVISA
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = cnt9x/_version.py
versionfile_build = cnt9x/_version.py
tag_prefix =
parentdir_prefix = cnt9x-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
exclude = cnt9x/_version.py
max-line-length = 88
extend-ignore = E203